--- a/Eco-War-DataAccess.Inmemory/Eco-War-DataAccess.InMemory.csproj
+++ b/Eco-War-DataAccess.Inmemory/Eco-War-DataAccess.InMemory.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,7 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProductRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Eco-War.Core\Eco-War.Core.csproj">
+      <Project>{A57E0C04-174E-4895-82B7-C0311DD703A5}</Project>
+      <Name>Eco-War.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
